@@ -9,14 +9,14 @@
 #include <was/simple.h>
 
 struct was_simple_iterator {
-    std::map<std::string, std::string>::const_iterator i, end;
+    std::multimap<std::string, std::string>::const_iterator i, end;
 
     struct was_simple_pair pair;
 };
 
 struct was_simple_iterator *
-was_simple_iterator_new(std::map<std::string, std::string>::const_iterator begin,
-                        std::map<std::string, std::string>::const_iterator end)
+was_simple_iterator_new(std::multimap<std::string, std::string>::const_iterator begin,
+                        std::multimap<std::string, std::string>::const_iterator end)
 {
     auto *i = new was_simple_iterator();
 
